chronicle-domain-test/src/snapshots/chronicle_domain_test__test__revision.snap
---
source: chronicle-domain-test/src/test.rs
assertion_line: 286
expression: created
---
[data.wasRevisionOf]
context = 'http://blockchaintp.com/chronicle/ns#entity:generated'
