chronicle-domain-test/src/snapshots/chronicle_domain_test__test__untyped_derivation.snap
---
source: chronicle-domain-test/src/test.rs
assertion_line: 196
expression: created
---
[data.wasDerivedFrom]
context = 'http://blockchaintp.com/chronicle/ns#entity:generated'
